--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -87,7 +87,9 @@
   flex-wrap: wrap;
 }
 
-.home__section3__item{
+.home__section3__item,
+.home__section3__item--first,
+.home__section3__item--second{
   min-width: 32rem;
   height: 22rem;
   border-radius: 3rem;
@@ -99,22 +101,37 @@
   box-shadow: .3rem .3rem black black;
 }
 
-.home__icon__container{
+.home__section3__item--first{
+  background-color: #0030CF;
+}
+
+.home__icon__container,
+.home__icon__container--first,
+.home__icon__container--second{
   width: 5rem;
   height: 5rem;
   display: flex;
   align-items: center;
   justify-content: center;
-  background-color: var(--secondary-color);
   border-radius: 50%;
   margin-top: 2rem;
+  background-color: var(--secondary-color);
 }
 
-.home__icon{
+
+.home__icon__container--second{
+  background-color: black;
+}
+
+.home__icon,
+.home__icon--first,
+.home__icon--second{
   font-size: 2.5rem;
 }
 
-.home__section3__text{
+.home__section3__text,
+.home__section3__text--first,
+.home__section3__text--second{
   height: auto;
   text-align: center;
   width: 20rem;
@@ -122,7 +139,12 @@
   color: black;
 }
 
-.home__section3__h3{
+.home__section3__text--second{
+  color: white;
+}
+
+.home__section3__h3,
+.home__section3__h3--first{
   font-size: 2rem;
   margin-bottom: 1rem;
 }
@@ -180,8 +202,8 @@
 
 
 .home__section5__box{
-  height: 35rem;
-  width: 30rem;
+  height: 25rem;
+  width: 25rem;
   margin: 5rem 0;
   display: flex;
   flex-direction: column;
@@ -192,8 +214,8 @@
 
 .home__section5__box--second{
   color: #9b9b9b;
-  height: 35rem;
-  width: 30rem;
+  height: 25rem;
+  width: 25rem;
   margin: 5rem 0;
   display: flex;
   border-radius: 2rem;
@@ -211,26 +233,22 @@
   margin-top: 1rem;
 }
 
-.home__section5__h3{
-  color: black;
-  font-size: 3rem;
-  margin-top: 2rem;
+.home__section5__h3--second{
+  color: white;
+  font-size: 2.5rem;
+  margin-top: 1.5rem;
 }
 
-.home__section5__span:first-child(){
+.home__section5__span{
   color: black;
   margin-top: 2rem;
   font-size: 1.4rem;
   font-weight: 500;
 }
 
-.home__section5__span:nth-child(2),
-.home__section5__span:nth-child(3),
-.home__section5__span:nth-child(4),
-.home__section5__span:nth-child(5),
-.home__section5__span:nth-child(6){
+.home__section5__span--second{
   color: white;
-  margin-top: 2rem;
+  margin-top: 1.5rem;
   font-size: 1.4rem;
   font-weight: 500;
 }
@@ -246,6 +264,12 @@
 .home__section5__icon{
   color: #0030CF;
   margin-right: .5rem;
+}
+
+.home__section5__icon--second{
+  color:  green;
+  margin-right: .5rem;
+  font-size: 1.5rem;
 }
 
 @media screen and (max-width: 1600px) {
