--- a/src/components/Contact/Contact.css
+++ b/src/components/Contact/Contact.css
@@ -1,97 +1,108 @@
 .contact {
-  height: calc(100vh - 75px);
-  margin-top: var(--margin-top-size);
+  height: calc( 100dvh - var(--margin-top-size)) ;
   width: 100vw;
   display: flex;
-  flex-direction: column;
-  justify-content: space-evenly;
+  justify-content: center;
   align-items: center;
   position: relative;
 }
 
-.contact__box {
-  height: 450px;
-  width: 100vw;
-}
-
-.contact__h1 {
-  font-size: 43px;
-  text-align: center;
-}
-
-.contact__prevbutton {
-  position: absolute;
+.form{
+  height: 40rem;
+  width: 50rem;
   display: flex;
-  justify-content: center;
+  flex-direction: column;
   align-items: center;
-  border: 2px solid var(--secondary-color);
-  border-radius: 10px;
-  color: var(--secondary-color);
-  height: auto;
-  width: auto;
-  font-size: 90px;
-  padding: 5px;
-  opacity: 0.2;
-  transition-duration: 0.3s;
-  left: 5px;
-  z-index: 10;
+  background-color: var(--secondary-color);
 }
 
-.contact__prevbutton:hover {
-  text-decoration: none;
-  opacity: 1;
-  color: var(--secondary-color);
-  background-color: transparent;
-  border: 2px solid transparent;
+.contact__h2 {
+  font-size: 2.5rem;
+  text-align: center;
+  margin-top: 2rem;
 }
 
-@media screen and (max-width: 1120px) {
-  .contact__prevbutton {
-    font-size: 80px;
-  }
+.form__input{
+  width: 30rem;
+  height: 4rem;
+  border: none;
+  font-size: 1rem;
+  background: unset;
+  border-bottom: .1rem solid gray;
 }
 
-@media screen and (max-width: 840px) {
-  .contact__prevbutton {
-    font-size: 75px;
-  }
+.form__input:focus{
+  outline: none;
+  border-bottom: .1rem solid #07C704;;
 }
 
-@media screen and (max-width: 685px) {
-  .contact {
-    height: calc(100vh - 90px);
-  }
-
-  .contact__h1 {
-    font-size: 40px;
-  }
-
-  .contact__prevbutton {
-    font-size: 65px;
-    opacity: 1;
-  }
+.form__input--message{
+  padding-top: 1rem;
+  width: 30rem;
+  height: 10rem;
+  border: none;
+  resize: none;
+  font-size: 1rem;
+  background: unset;
+  border-bottom: .1rem solid gray;
 }
 
-@media screen and (max-width: 460px) {
-  .contact__h1 {
-    font-size: 30px;
-  }
-
-  .contact__prevbutton {
-    font-size: 55px;
-  }
+.form__input--message:focus{
+  outline: none;
+  border-bottom: .1rem solid #07C704;;
 }
 
-@media screen and (max-width: 330px) {
-  .contact {
-    height: calc(100vh - 70px);
-  }
+.form__submit{
+  font-size: 1.4rem;
+  margin-top: 1rem;
+  background-color: unset;
+  border: .2rem solid #07C704;
+  padding: .5rem;
+  border-radius: .5rem;
+  transition-timing-function: ease-out;
+  transition-duration: .2s;
+}
 
-  .contact__h1 {
-    font-size: 25px;
-  }
+.form__submit:hover{
+  background-color: #07C704;
+}
 
-  .contact__prevbutton {
-    font-size: 40px;
-  }
+.contact__info{
+  margin-top: 1.5rem;
+  height: 8rem;
+  width: 20rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-evenly;
+}
+
+.contact__span{
+  font-size: 1.4rem;
+}
+
+.contact__icon__box{
+  width: 15rem;
+  display: flex;
+  justify-content: space-evenly;
+}
+
+.icon__item{
+  width: 3.5rem;
+  height: 3.5rem;
+  border-radius: 50%;
+  border: .2rem solid #07C704;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transition-timing-function: ease-in;
+  transition-duration: .3s;
+}
+
+.icon__item:hover{
+  background-color: #07C704;
+}
+
+.contact__icon{
+  font-size: 2.1rem;
 }
