--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -1,111 +1,49 @@
 .about {
-  display: flex;
+  height: 140dvh;
   width: 100vw;
-  height: calc(100dvh - 125px);
   margin-top: var(--margin-top-size);
-  justify-content: center;
+  display: flex;
+  flex-direction: column;
   align-items: center;
 }
 
-.about__content {
-  height: 100%;
+.about__section1 {
+  height: 75dvh;
   width: 90vw;
   display: flex;
-  flex-direction: column;
-  justify-content: space-evenly;
-  align-items: center;
-}
-
-.about__description {
-  text-align: center;
-  width: 60vw;
-  height: 45vh;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-evenly;
-}
-
-.about__h1 {
-  font-size: 43px;
-}
-
-.about__p {
-  font-size: 24px;
-}
-
-.separator {
-  width: 80%;
-  background-color: var(--secondary-color);
-  border: 1px solid var(--secondary-color);
-}
-
-.about__skills {
-  text-align: center;
-  width: 60vw;
-  height: 45vh;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-evenly;
-  align-items: center;
-}
-
-.about__ul {
-  width: 100%;
-  height: 15vh;
-  display: flex;
-  justify-content: center;
-}
-
-.about__li {
-  display: flex;
-  flex-direction: column;
+  position: relative;
   justify-content: center;
   align-items: center;
-  height: 100%;
-  width: 10vw;
 }
 
-.about__icon {
-  font-size: 45px;
-  margin-bottom: 15px;
-}
-
-.icon__span {
-  font-size: 16px;
-}
-
-.about__prevbutton,
-.about__nextbutton {
+.about__img1__container{
   position: absolute;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  border: 2px solid var(--secondary-color);
-  border-radius: 10px;
-  color: var(--secondary-color);
-  height: auto;
-  width: auto;
-  font-size: 90px;
-  padding: 5px;
-  opacity: 0.2;
-  transition-duration: 0.3s;
+  width: 40rem;
+  height: 40rem;
+  overflow: hidden;
+  border-radius: 50%;
+  margin-right: 10rem;
+  border: 4px solid var(--secondary-color);
 }
 
-.about__prevbutton {
-  left: 5px;
+.about__img1{
+  margin-left: -11.5rem;
 }
 
-.about__nextbutton {
-  right: 5px;
+.about__h2{
+  position: absolute;
+  font-size: 5rem;
+  margin-left: 5rem;
+  margin-bottom: 32rem;
+  color: #07C704;
+  font-weight: 800;
 }
 
-.about__prevbutton:hover,
-.about__nextbutton:hover {
-  text-decoration: none;
-  opacity: 1;
-  color: var(--secondary-color);
-  background-color: transparent;
-  border: 2px solid transparent;
+.about__p{
+  margin-top: 1rem;
+  color: black;
+  font-size: 1.5rem;
+  width: 80rem;
 }
 
 @media screen and (max-width: 1300px) {
