--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -39,11 +39,16 @@
   font-weight: 800;
 }
 
+.about__p__container{
+
+}
+
 .about__p{
   margin-top: 1rem;
-  color: black;
+  color: white;
   font-size: 1.5rem;
   width: 80rem;
+  background-color: rgba(0, 0, 0, 0.7);
 }
 
 @media screen and (max-width: 1300px) {
