--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -7,8 +7,7 @@
   height: var(--margin-top-size);
   background-color: white;
   display: flex;
-  justify-content: center;
-  border-bottom: 1px solid black
+  justify-content: flex-start;
 }
 
 .menu__btn {
@@ -30,7 +29,8 @@
 }
 
 .logo{
-  height: 4.9rem;
+  height: var(--margin-top-size);
+  margin-left: .5rem;
 }
 
 .nav__ul {
@@ -39,8 +39,7 @@
   height: 100%;
   list-style: none;
   position: absolute;
-  left: 3rem;
-
+  right: 3rem;
 }
 
 .nav__li {
