--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -23,7 +23,7 @@
   overflow: hidden;
   border-radius: 50%;
   margin-right: 10rem;
-  border: 4px solid var(--secondary-color);
+  border: 4px solid blue;
 }
 
 .about__img1{
@@ -35,12 +35,22 @@
   font-size: 5rem;
   margin-left: 5rem;
   margin-bottom: 32rem;
-  color: #07C704;
+  color: var(--secondary-color);
   font-weight: 800;
 }
 
-.about__p__container{
+.about__p__background{
+  width: 100vw;
+  height: 70dvh;
+}
 
+.about__p__container{
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: rgba(0, 0, 0, 0.7);
 }
 
 .about__p{
@@ -48,7 +58,6 @@
   color: white;
   font-size: 1.5rem;
   width: 80rem;
-  background-color: rgba(0, 0, 0, 0.7);
 }
 
 @media screen and (max-width: 1300px) {
