--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -1,6 +1,6 @@
 .home {
-  width: 100vw;
   height: auto;
+  width: 100vw;
 }
 
 .home__section1 {
@@ -18,18 +18,8 @@
 .home__section2{
   display: flex;
   height: 95dvh;
-  width: 100vw;
   align-items: center;
-  justify-content: center; 
-}
-
-.home__background__opacity{
-  display: flex;
-  height: 100%;
-  width: 100%;
   justify-content: space-evenly; 
-  align-items: center;
-  background-color: rgba(0, 0, 0, 0.6);
 }
 
 .home__section1__text{
@@ -37,6 +27,10 @@
   padding: 1.5rem;
   flex-direction: column;
   align-items: start;
+  background-color: rgba(0, 0, 0, 0.6);
+  position: absolute;
+  bottom: 5rem;
+  left: 5rem;
 }
 
 .home__frontpage{
@@ -73,13 +67,13 @@
 .home__h3{
   font-weight: 700;
   font-size: 2.2rem;
-  color: #E3D500;
+  color: white;
   margin-right: 5rem;
   margin-bottom: 1rem;
-  background-color: black;
   border-radius: 1rem;
   padding: .5rem;
-  border: .2rem solid #E3D500;
+  background-color: black;
+  border: .2rem solid #273E8E;
 }
 
 .home__p{
@@ -91,15 +85,18 @@
 
 .section1__btn{
   margin-right: 5rem;
-  color:  black;
+  color:  white;
   font-size: 1.3rem;
   padding: .5rem;
   border-radius: .5rem;
-  background-color: #E3D500;
+  background-color: #273E8E;
 }
 
 .home__section1__logo{
-  height: 35rem;
+  height: 25rem;
+  position: absolute;
+  top: 7rem;
+  right: 5rem;
 }
 
 .home__section3{
@@ -253,15 +250,15 @@
   margin-top: 5rem;
   font-size: 1.2rem;
   border-radius: .5rem;
-  background-color: #E3D500;
+  background-color: blue;
   transition-duration: 0.3s;
   transition-timing-function: ease;
-  color: black;  
+  color: white;  
 }
 
 .home__section4__btn:hover{
-  color: black;
-  background-color: white;
+  color: white;
+  border: 3px solid blue;
 }
 
 .home__section5{
