--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -142,7 +142,8 @@
 }
 
 .home__section2__logo{
-  font-size: 2.5rem;
+  height: 9rem;
+  margin-top: 1rem;
 }
 
 .home__section2__text{
@@ -174,13 +175,13 @@
 .home__section2__btn{
   font-size: 1.2rem;
   padding: .5rem;
-  background-color: black;
+  background-color: var(--secondary-color);
   color: white;
   border-radius: .7rem;
 }
 
 .blue--card--btn{
-  background-color: var(--secondary-color);
+  background-color: black;
 }
 
 .home__section3{
