--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -22,6 +22,14 @@
   justify-content: space-evenly; 
 }
 
+.home__frontpage{
+  position: absolute;
+  z-index: 10;
+  margin-top: 5rem;
+  height: 30rem;
+  width: 45rem;
+}
+
 .home__services__text__box{
   display: flex;
   padding: 1rem;
@@ -33,14 +41,6 @@
   left: 5rem;
   width: 42rem;
   height: auto;
-}
-
-.home__frontpage{
-  position: absolute;
-  z-index: 10;
-  margin-top: 5rem;
-  height: 30rem;
-  width: 45rem;
 }
 
 .section1__icon{
@@ -76,18 +76,18 @@
 }
 
 .home__p{
-  font-size: 1.4rem;
   color: white;
+  font-size: 1.4rem;
   margin-bottom: 1rem;
 }
 
 .section1__btn{
+  padding: .5rem;
   color:  white;
   font-size: 1.3rem;
-  padding: .5rem;
+  margin-bottom: 1rem;
   border-radius: .5rem;
   background-color: #273E8E;
-  margin-bottom: 1rem;
 }
 
 .home__section1__logo{
@@ -106,7 +106,7 @@
 }
 
 .home__section2__box{
-  width: 100rem;
+  width: auto;
   height: auto;
   margin: 5rem;
   display: flex;
@@ -117,7 +117,7 @@
 
 .home__section2__card{
   height: 30rem;
-  min-width: 32rem;
+  width: 32rem;
   border-radius: 3rem;
   display: flex;
   margin: .5rem;
@@ -168,8 +168,8 @@
 }
 
 .home__section2__p{
-  font-size: 1rem;
-  width: 23rem;
+  font-size: 1.1rem;
+  width: 28rem;
 }
 
 .home__section2__btn{
@@ -237,8 +237,7 @@
   justify-content: space-evenly;
 }
 
-
-.home__section4__box{
+.home__section4__card{
   height: 25rem;
   width: 25rem;
   margin: 5rem 0;
@@ -249,17 +248,9 @@
   box-shadow: 6px 6px 20px #B6B6B6;
 }
 
-.home__section4__box--second{
+.home__section4__card--blue--card{
   color: #9b9b9b;
-  height: 25rem;
-  width: 25rem;
-  margin: 5rem 0;
-  display: flex;
-  border-radius: 2rem;
-  flex-direction: column;
-  align-items: center;
   background-color: #374AD6;
-  box-shadow: 6px 6px 20px #B6B6B6;
 }
 
 .home__section4__img{
@@ -268,9 +259,11 @@
   color: #0030CF;
   background-color: #E1E1E1;
   margin-top: 1rem;
+  width: 5rem;
+  height: 5rem;
 }
 
-.home__section4__h3--second{
+.home__section4__h3--blue--card--h3{
   color: white;
   font-size: 2.5rem;
   margin-top: 1.5rem;
@@ -283,7 +276,7 @@
   font-weight: 500;
 }
 
-.home__section4__span--second{
+.home__section4__span--blue--card--span{
   color: white;
   margin-top: 1.5rem;
   font-size: 1.4rem;
@@ -303,122 +296,306 @@
   margin-right: .5rem;
 }
 
-.home__section4__icon--second{
+.home__section4__icon--blue--card--icon{
   color:  green;
   margin-right: .5rem;
   font-size: 1.5rem;
 }
 
-@media screen and (max-width: 1600px) {
-  .home__container {
-    width: 70vw;
+@media screen and (max-width: 1746px) {
+ 
+  .home__section2__card{
+    width: 25rem;
+    height: 28rem;
   }
 
-  .home__h1 {
-    font-size: 39px;
+  .home__section2__logo{
+    height: 8.5rem;
   }
 
-  .home__p {
-    font-size: 19px;
+  .home__section2__h3{
+    font-size: 1.8rem;
+  }
+  
+  .home__section2__p{
+    font-size: 0.9rem;
+    width: 20rem;
+  }
+  
+  .home__section2__btn{
+    font-size: 1rem;
   }
 
-  .home__section2__logo {
-    height: 450px;
-    width: 400px;
-  }
 }
 
-@media screen and (max-width: 1120px) {
-  .home__h1 {
-    font-size: 37px;
+@media screen and (max-width: 1440px) {
+
+  .home__services__text__box{
+    left: 2rem;
+    bottom: 2rem;
+  }
+  
+  .home__h2{
+    font-size: 3rem;
+  }
+  
+  .home__p{
+    font-size: 1.2rem;
+  }
+  
+  .section1__btn{
+    font-size: 1rem;
+  }
+  
+  .home__h3{
+    font-size: 1.9rem;
+  }
+  
+  .home__section1__logo{
+    top: 1.5rem;
+    right: 1.5rem;
+    height: 19rem;
   }
 
-  .home__p {
-    font-size: 17px;
+  /* Section 2 */
+
+  .home__section2__box{
+    margin: 3rem;
   }
 
-  .home__section2__logo {
-    height: 400px;
-    width: 350px;
-  }
-}
-
-@media screen and (max-width: 840px) {
-  .home__container {
-    width: 95vw;
+  .home__section2__card{
+    width: 20rem;
+    height: 23.5rem;
   }
 
-  .home__h1 {
-    font-size: 35px;
+  .home__section2__logo{
+    height: 7.5rem;
   }
 
-  .home__p {
-    font-size: 15px;
+  .home__section2__h3{
+    font-size: 1.6rem;
+    margin-bottom: .5rem;
+  }
+  
+  .home__section2__p{
+    font-size: 0.8rem;
+    width: 18rem;
+  }
+  
+  .home__section2__btn{
+    font-size: 0.8rem;
+    margin-top: -1rem;
   }
 
-  .home__section2__logo {
-    height: 380px;
-    width: 330px;
-  }
-}
+  /* Section 3 */
 
-@media screen and (max-width: 685px) {
-  .home {
+  .home__section3__box{
+    width: 35rem;
+    height: 39rem;
+  }
+
+  .home__section3__h3{
+    font-size: 3rem;
     margin-top: 0;
-    height: calc(100dvh - 90px);
+  }
+  
+  .home__section3__p{
+    font-size: 1.5rem;
+    margin: 2rem 0;
+  }
+  
+  .home__section3__btn{
+    padding: .7rem;
+    margin-top: 5rem;
+    font-size: 1.1rem;
   }
 
-  .home__container {
-    margin-top: 50px;
-    flex-direction: column;
-    height: 100%;
+  /* Section 4 */
+
+  .home__section4__card{
+    height: 22rem;
+    width: 22rem;
+    margin: 1rem 0;
+    display: flex;
   }
 
-  .home__textBox {
-    width: 50%;
-    margin-top: -20px;
+  .home__section4__h3--blue--card--h3{
+    font-size: 2rem;
   }
 
-  .home__h1 {
-    font-size: 30px;
+  .home__section4__span{
+    margin-top: 1rem;
+    font-size: 1.4rem;
   }
 
-  .home__p {
-    font-size: 15px;
+  .home__section4__span--blue--card--span{
+    margin-top: 1rem;
+    font-size: 1.2rem;
   }
 
-  .home__section2__logo {
-    height: 260px;
-    width: 260px;
+  .home__section4__p{
+    margin-top: 0;
+    font-size: 1rem;
   }
+
 }
 
-@media screen and (max-width: 460px) {
-  .home__container {
-    justify-content: center;
+
+@media screen and (max-width: 1114px) {
+
+  .home__services__text__box{
+    width: 34rem;
   }
 
-  .home__textBox {
-    width: 80%;
-    margin: 0;
+  .home__h2{
+    font-size: 2.5rem;
   }
 
-  .home__section2__logo {
-    margin-top: 30px;
-    height: 280px;
-    width: 280px;
+  .home__p{
+    font-size: 1rem;
   }
+
+  .section1__btn{
+    font-size: 0.8rem;
+  }
+
+  .section1__icon{
+    font-size: 1.3rem;
+  }
+
+  .home__h3{
+    font-size: 1.5rem;
+  }
+
+  .home__section1__logo{
+    top: 1.5rem;
+    right: 1.5rem;
+    height: 16rem;
+  }
+
+  .home__section3__box{
+    width: 30rem;
+    height: 35rem;
+  }
+
+  .home__section3__h3{
+    font-size: 2.3rem;;
+  }
+
+  .home__section3__p{
+    font-size: 1.1rem;
+  } 
+
+  .home__section3__btn{
+    padding: .6rem;
+    font-size: 1rem;
+  }
+
+    /* Section 4 */
+
+  .home__section4__card{
+    height: 15rem; 
+    width: 15rem;
+    margin: 1rem 0;
+    display: flex;
+  }
+
+  .home__section4__img{
+    width: 4rem;
+    height: 4rem;
+  }
+
+  .home__section4__h3--blue--card--h3{
+    font-size: 1.3rem;
+  }
+
+  .home__section4__span{
+    margin-top: 1rem;
+    font-size: 0.9rem;
+  }
+
+  .home__section4__span--blue--card--span{
+    margin-top: 0.6rem;
+    font-size: 0.9rem;
+  }
+
+  .home__section4__icon--blue--card--icon{
+    margin-right: .5rem;
+    font-size: 1rem;
+  }
+
+  .home__section4__p{
+    margin-top: 0;
+    font-size: 0.7rem;
+  }
+
 }
 
-@media screen and (max-width: 380px) {
-  .home__section2__logo {
-    height: 230px;
-    width: 230px;
+@media screen and (max-width: 888px) {
+
+  .home__services__text__box{
+    width: 28rem;
+    left: 5rem;
+    bottom: 7rem;
   }
+
+  .home__h2{
+    font-size: 2rem;
+  }
+
+  .home__p{
+    font-size: 1.1rem;
+  }
+
+  .section1__btn{
+    font-size: 0.9rem;
+  }
+
+  .section1__icon{
+    font-size: 1rem;
+  }
+
+  .home__h3{
+    font-size: 1.2rem;
+  }
+
+  .home__section1__logo{
+    top: 5rem;
+    right: 5rem;
+    height: 17rem;
+  }
+
+  .home__section3__h3{
+    font-size: 2.1rem;;
+  }
+
+  .home__section3__p{
+    font-size: 1.1rem;
+    margin: 1rem 0;
+  }
+
 }
 
-@media screen and (max-width: 330px) {
-  .home {
-    height: calc(100dvh - 70px);
+@media screen and (max-width: 750px) {
+
+  .home__services__text__box{
+    width: 30rem;
+    left: 5rem;
+    bottom: 5rem;
   }
+
+  .home__h2{
+    font-size: 2.4rem;
+  }
+
+  .home__p{
+    font-size: 1.2rem;
+  }
+
+  .home__section1__logo{
+    top: 3rem;
+    right: 3rem;
+    height: 19rem;
+  }
+
 }
