--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -4,20 +4,11 @@
 
 }
 
-.home__section1 {
-  position: relative;
-  height: 80dvh;
-  top: 0;
-  left: 0;
-  width: 100vw;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
 .home__section1{
+  position: relative;
   display: flex;
   height: 95dvh;
+  width: 100vw;
   align-items: center;
   justify-content: space-evenly; 
 }
@@ -473,6 +464,14 @@
     height: 16rem;
   }
 
+  .home__section2__box{
+    width: 43rem;
+  }
+
+  .home__section2__text{
+    width: auto;
+  }
+
   .home__section3__box{
     width: 30rem;
     height: 35rem;
@@ -566,7 +565,7 @@
   }
 
   .home__section3__h3{
-    font-size: 2.1rem;;
+    font-size: 2.1rem;
   }
 
   .home__section3__p{
@@ -576,11 +575,11 @@
 
 }
 
-@media screen and (max-width: 750px) {
+@media screen and (max-width: 767px) {
 
   .home__services__text__box{
     width: 30rem;
-    left: 5rem;
+    left: 3rem;
     bottom: 5rem;
   }
 
@@ -596,6 +595,115 @@
     top: 3rem;
     right: 3rem;
     height: 19rem;
+  }
+
+  .home__section2__box{
+    margin: 2rem 0;
+    width: 100vw;
+    }
+
+  .home__section2__card{
+    width: 100%;
+    height: 22rem;
+  }
+
+  .home__section2__logo{
+    height: 6.5rem;
+  }
+  
+  .home__section2__text{
+    margin-top: .5rem;
+  }
+
+  .home__section2__h3{
+    width: auto;
+  }
+
+  .home__section2__p{
+    font-size: 1rem;
+    width: 80%;
+  }
+
+  .home__section2__btn{
+    font-size: 0.9rem;
+  }
+
+  .home__section3{
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .home__section3__box{
+    min-width: 35rem;
+    height: 50rem;
+    margin: .5rem;
+  }
+
+  .home__section3__h3{
+    font-size: 3rem;
+  }
+
+  .home__section3__p{
+    font-size: 1.3rem;
+  }
+
+  .home__section3__btn{
+    font-size: 1.1rem;
+  }
+
+  .home__section4{
+    flex-wrap: unset;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+  }
+
+  .home__section4__card{
+    width: 90%;
+    height: 20rem;
+  }
+
+  .home__section4__img{
+    width: 6.5rem;
+    height: 6.5rem;
+  }
+
+  .home__section4__h3--blue--card--h3{
+    font-size: 2rem;
+  }
+
+  .home__section4__span{
+    margin-top: 0.7rem;
+    font-size: 1.3rem;
+  }
+
+  .home__section4__icon--blue--card--icon{
+    font-size: 1.4rem;
+  }
+
+  .home__section4__p{
+    margin-top: 0;
+    font-size: 1.1rem;
+  }
+
+}
+
+@media screen and (max-width: 600px) {
+
+  .home__section1{
+    position: unset;
+    display: flex;
+    flex-direction: column-reverse;
+    align-items: center;
+    justify-content: space-evenly; 
+  }
+
+  .home__services__text__box{
+    position: unset;
+  }
+
+  .home__section1__logo{
+    position: unset;
   }
 
 }
